# not-a-wow-killer

./: README.md  not-a-wow-killer.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-6.16/7.10.3/flag-cache/: StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-6560e1a265cc6d0d13417e2fff6a2084  base-orphans-0.5.4-80aa061a7fc1e4ab8c82be1540afd813  bifunctors-5.2-e901e58a1f692b35e864ebeecde90ba3  comonad-4.2.7.2-4c06ad59e8f1640d751fb18f0c315142  contravariant-1.4-55200b9f0a5e1fba15c5250daf39819a  distributive-0.5.0.2-393a023f71dc3cd11f1fef5933233cdf  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  free-4.12.4-1f6c876d84b568df61e0ac1fd717968b  hashable-1.2.4.0-eb8410705fa05638eebff0131e5dac80  kan-extensions-4.2.3-e4925f38de76626cfa3d4d1f3328b032  lens-4.13-976dc6c179c528427844472a467ff814  not-a-wow-killer-0.1.0.0-c1810deb50f0621180dce0423a39178c  prelude-extras-0.4.0.3-35d27727606bcd0bcd2c3491f65bf5b7  profunctors-5.2-e10dc63dd9e5a237a236efdd20388176  reflection-2.1.2-a1800076486d650159694cb5f635481f  semigroupoids-5.0.1-a3a43bb732c861c8336f21aeb6e8a23e  semigroups-0.18.1-48610a3351fd01d4938b67b739b4380c  tagged-0.8.4-9a04b6ba5af4681c23b22a393e2724e7  text-1.2.2.1-f5b1651133426aa2c83c19d64d248779  transformers-compat-0.4.0.4-8aa4073730c676dbe210ea8bffd8d092  unordered-containers-0.2.7.1-d64b45151d7f8bba4935d69920c8c76d  void-0.7.1-2de3b7ab44b3e20798f39b12f1c64f9b
src/: Lib.hs  Main.hs
src/Control/Monad/Freer/: Extensions.hs
src/NotAWoWKiller/: Model.hs  SimpleSimulator.hs
src/NotAWoWKiller/Model/: Cost.hs  Modifier.hs  School.hs  Skill.hs
(+2 files in other folders)
