name:                not-a-wow-killer
version:             0.1.0.0
synopsis:            A tool to model various RPG skills.
description:         Please see README.md
homepage:            https://github.com/githubuser/not-a-wow-killer#readme
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
copyright:           2016 Solonarv
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 1
                     , lens >= 4.13 && < 5
                     , text > 1.2 && < 2
  default-language:    Haskell2010

executable not-a-wow-killer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , not-a-wow-killer
  default-language:    Haskell2010

test-suite not-a-wow-killer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , not-a-wow-killer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/not-a-wow-killer
